--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <nav>
             <div class="logo">
                 <a href="/">
-                    <img src="logo.svg" alt="[French Code Studio] - Logo" class="agency-logo">
+                    <img src="LOGO FCS.png" alt="[French Code Studio] - Logo" class="agency-logo">
                 </a>
             </div>
             <ul class="nav-links">
