--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
     <main>
         <section id="hero" class="hero-section">
 
-             <div class="background-logo-watermark">
-        <img src="LOGO FCS.png" alt="Logo de fond" class="logo-watermark-img">
-    </div>
-            <h1>[Nom de votre Agence] : Le digital, enfin à votre image.</h1>
+            <h1>[French Code Studio ] : Le digital, enfin à votre image.</h1>
             <p>Fatigué des sites datés qui ne convertissent pas ? Nous concevons des plateformes web modernes, <strong>optimisées SEO</strong> et centrées sur l'utilisateur (UX/UI), pour propulser votre croissance.</p>
             
             <a href="#contact" class="button primary">Lancer mon Projet</a>
