--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             <div class="logo">
                 <a href="/">
                     <img src="LOGO FCS.png" alt="[French Code Studio] - Logo" class="agency-logo">
+                    
+                    <span class="site-name-text">[French Code Studio]</span>
                 </a>
             </div>
             <ul class="nav-links">
@@ -28,7 +30,6 @@
     <main>
         <section id="hero" class="hero-section">
 
-            <h1>[French Code Studio ] : Le digital, enfin à votre image.</h1>
             <p>Fatigué des sites datés qui ne convertissent pas ? Nous concevons des plateformes web modernes, <strong>optimisées SEO</strong> et centrées sur l'utilisateur (UX/UI), pour propulser votre croissance.</p>
             
             <a href="#contact" class="button primary">Lancer mon Projet</a>
