--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>[Frenc Code Studio] | Création de Sites Web Modernes & Performants</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
     </head>
 <body>
 
@@ -14,7 +17,7 @@
             <div class="logo">
                     <img src="LOGO FCS.png" alt="[French Code Studio] - Logo" class="agency-logo">
                     
-                    <span class="site-name-text">[French Code Studio]</span>
+                    <span class="site-name-text">"French Code Studio</span>
             
             </div>
             <ul class="nav-links">
