--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo">
                     <img src="LOGO FCS.png" alt="[French Code Studio] - Logo" class="agency-logo">
                     
-                    <span class="site-name-text">"French Code Studio</span>
+                    <span class="site-name-text">French Code Studio</span>
             
             </div>
             <ul class="nav-links">
