--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div class="logo">
-                    <img src="LOGO FCS.png" alt="[French Code Studio] - Logo" class="agency-logo">
+                    <img src="LOGO FCS.jpg" alt="[French Code Studio] - Logo" class="agency-logo">
                     
                     <span class="site-name-text">French Code Studio</span>
             
