--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Réalisations</a></li>
                 <li><a href="#apropos">À Propos</a></li>
-                <li><a href="#contact.html" class="cta-nav">Contact</a></li>
+                <li><a href="contact.html" class="cta-nav">Contact</a></li>
             </ul>
         </nav>
     </header>
