--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </section>
 <div class="intro-message-container"> 
     <p class="introduction-text">Fatigué des sites datés qui ne convertissent pas ? Nous concevons des plateformes web modernes, <strong>optimisées SEO</strong> et centrées sur l’utilisateur (UX/UI), pour propulser votre croissance.</p>
-    <a href="#contact" class="button primary">Lancer mon Projet</a>
+    <a href="contact.html" class="button primary">Lancer mon Projet</a>
 </div>
 
 <main>
