--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactez French Code Studio - Démarrer votre projet</title>
-    <link rel="stylesheet" href="style (2).css"> 
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
 
