--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactez French Code Studio - Démarrer votre projet</title>
     <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="contact.css"> 
 </head>
 <body>
 
