--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
             <div class="contact-grid">
                 <div class="contact-form-container">
                     <h2>Nous Parler de Votre Idée</h2>
-                    <form action="[VOTRE_SCRIPT_DE_TRAITEMENT_MAIL]" method="POST" class="main-form">
+                    <form name="contact-form-fcs" method="POST" data-netlify="true" class="main-form">
+                        <input type="hidden" name="form-name" value="contact-form-fcs" />
                         
                         <div class="form-group">
                             <label for="name">Votre Nom et Prénom</label>
