--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
                     <h2>Nous Parler de Votre Idée</h2>
                     <form name="contact-form-fcs" method="POST" data-netlify="true" class="main-form">
                         <input type="hidden" name="form-name" value="contact-form-fcs" />
+                        </form>
                         
                         <div class="form-group">
                             <label for="name">Votre Nom et Prénom</label>
