--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="contact.css"> 
 </head>
-<body class="contact-dark-theme">
+<body>
 
     <header class="main-header">
         </header>
