--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul class="nav-links">
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Réalisations</a></li>
-                <li><a href="#apropos">À Propos</a></li>
+                <li><a href="a-propos.html" class="cta-nav">À Propos</a></li>
                 <li><a href="contact.html" class="cta-nav">Contact</a></li>
             </ul>
         </nav>
