--- a/a-propos.html
+++ b/a-propos.html
@@ -4,96 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - Votre Développeur Web Indépendant</title>
-    <style>
-        /* Styles de base pour la lisibilité (inchangés) */
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f8f8;
-            color: #333;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 40px auto;
-            padding: 20px;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #007bff;
-            text-align: center;
-            padding-bottom: 20px;
-            border-bottom: 3px solid #007bff;
-            margin-bottom: 40px;
-        }
-        h2 {
-            color: #333;
-            border-left: 5px solid #007bff;
-            padding-left: 15px;
-            margin-top: 30px;
-        }
-        .section {
-            padding: 20px 0;
-        }
-        /* Style pour mettre en évidence l'avantage unique */
-        .highlight-box {
-            background-color: #ffe0b2; /* Couleur douce pour mettre en valeur */
-            border: 2px solid #ff9800; /* Orange pour attirer l'attention */
-            padding: 20px;
-            margin: 30px 0;
-            border-radius: 5px;
-            font-weight: bold;
-            text-align: center;
-        }
-        .highlight-box p {
-            font-size: 1.1em;
-            margin: 5px 0;
-        }
-        /* Styles spécifiques au processus (inchangés) */
-        .process-step {
-            display: flex;
-            align-items: center;
-            margin-bottom: 25px;
-        }
-        .step-number {
-            background-color: #007bff;
-            color: white;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 1.2em;
-            font-weight: bold;
-            margin-right: 15px;
-            flex-shrink: 0;
-        }
-        /* Styles pour l'appel à l'action (inchangés) */
-        .cta {
-            text-align: center;
-            background-color: #e0f0ff;
-            padding: 30px;
-            margin-top: 40px;
-            border-radius: 5px;
-        }
-        .cta a {
-            background-color: #28a745;
-            color: white;
-            padding: 12px 25px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 15px;
-            transition: background-color 0.3s;
-        }
-        .cta a:hover {
-            background-color: #218838;
-        }
-    </style>
+    
+   <link rel="stylesheet" href="a-propos.css">
+    
 </head>
 <body>
 
