--- a/a-propos.html
+++ b/a-propos.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - Votre Développeur Web Indépendant</title>
-    
-   <link rel="stylesheet" href="a-propos.css">
+    <head>
+        <link rel="stylesheet" href="a-propos.css">
     
 </head>
 <body>
