--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Contactez French Code Studio - Démarrer votre projet</title>
     <link rel="stylesheet" href="style.css"> 
     <link rel="stylesheet" href="contact.css"> 
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
