--- a/a-propos.html
+++ b/a-propos.html
@@ -23,7 +23,7 @@
         <div class="section">
             <div class="content-row">
                 <div class="image-col">
-                    <img src="images/mission-strategique.jpg" alt="Photo illustrant la stratégie et la mission" class="section-image">
+                    <img src="MISSION.JPG" alt="Photo illustrant la stratégie et la mission" class="section-image">
                 </div>
                 <div class="text-col">
                     <h2>Ma Mission : Liberté, Performance et Maîtrise</h2>
@@ -42,7 +42,7 @@
         <div class="section row-reverse">
             <div class="content-row">
                 <div class="image-col">
-                    <img src="images/expertise-code.jpg" alt="Photo illustrant l'expertise en développement web" class="section-image">
+                    <img src="EXPERTISE.JPG" alt="Photo illustrant l'expertise en développement web" class="section-image">
                 </div>
                 <div class="text-col">
                     <h2>L'Expertise d'un Artisan du Web</h2>
@@ -65,7 +65,7 @@
         <div class="section">
              <div class="content-row">
                 <div class="image-col">
-                    <img src="images/processus-etapes.jpg" alt="Photo illustrant les étapes du processus de travail" class="section-image">
+                    <img src="PROCESSUS.JPG" alt="Photo illustrant les étapes du processus de travail" class="section-image">
                 </div>
                 <div class="text-col">
                     <h2>Mon Processus : De l'Idée à la Propriété</h2>
