--- a/a-propos.html
+++ b/a-propos.html
@@ -28,7 +28,7 @@
                 <div class="text-col">
                     <h2>Ma Mission : Liberté, Performance et Maîtrise</h2>
                     <p>
-                        En tant que développeur web <strong>indépendant</strong>, je m'engage à créer des solutions sur mesure et sans dépendance. Je ne vous vends pas un abonnement à ma plateforme ; je vous fournis un outil de travail <strong>unique</strong>, <strong>codé à la main</strong> du début à la fin, pour répondre précisément à vos besoins.
+                        En tant que développeur web <strong>indépendant</strong>, je conçois des solutions sur mesure, durable et sans dépendance. Je ne vous vends pas un abonnement à une plateforme fermée ; je vous livre un outil de travail unique <strong>unique</strong>, <strong>développé à la main</strong> du premier au dernier fichier, pour répondre précisément à vos besoins.
                     </p>
                     <p>
                         Mon approche garantit : une <strong>performance maximale</strong>, une <strong>sécurité accrue</strong> et surtout, la <strong>totale liberté</strong> de faire évoluer votre site avec n'importe quel prestataire, car le code source et toutes les données sont votre propriété exclusive.
