--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                 <li><a href="a-propos.html" class="cta-nav">À Propos</a></li>
                 <li><a href="contact.html" class="cta-nav">Contact</a></li>
             </ul>
+            <ul class="social-nav">
+            <li><a href="https://facebook.com/votrepage" target="_blank" aria-label="Facebook">📘</a></li>
+            <li><a href="https://instagram.com/votrepage" target="_blank" aria-label="Instagram">📷</a></li>
+        </ul>
         </nav>
     </header>
 
@@ -73,7 +77,18 @@
                 </article>
             </div>
         </section>
-        
+        <!-- NOUVEAU : Espace pour image -->
+        <div class="process-image-container">
+        <h3>Nos Réalisations en Image</h3>
+        <p>Découvrez quelques exemples de nos projets réussis</p>
+    <!-- Remplacez le placeholder par votre vraie image -->
+        <div class="image-placeholder">
+        📸 Ajoutez votre image ici
+        </div>
+    <!-- OU utilisez une vraie image : -->
+    <!-- <img src="votre-image.jpg" alt="Description de l'image"> -->
+      </div>
+
         <section class="final-cta" aria-label="Appel à l'action final">
             <h2>Prêt à dépasser vos concurrents&nbsp;?</h2>
             <p>Un site web est votre meilleur commercial. Investissez dans une présence qui fait la différence.</p>
