--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <li><a href="a-propos.html" class="cta-nav">À Propos</a></li>
                 <li><a href="contact.html" class="cta-nav">Contact</a></li>
             </ul>
-            <ul class="social-nav">
-            <li><a href="https://facebook.com/votrepage" target="_blank" aria-label="Facebook">📘</a></li>
-            <li><a href="https://instagram.com/votrepage" target="_blank" aria-label="Instagram">📷</a></li>
-        </ul>
+            <ul class="social-nav">     
+                <li><a href="https://facebook.com/votrepaget" target="_blank" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li><a href="https://instagram.com/votrepaget" target="_blank" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
         </nav>
     </header>
 
