--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Fatigué des sites datés qui ne convertissent pas ? Nous concevons des plateformes web modernes, 
                 <strong>optimisées SEO</strong> et centrées sur l’utilisateur (UX/UI), pour propulser votre croissance.
             </p>
-            <a href="contact.html" class="button primary large">Lancer mon Projet</a>
+            <a href="#services" class="button primary large">Lancer mon Projet</a>
         </div>
         
         <section id="services" class="process-section" aria-labelledby="services-title">
