--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@
             <a href="#services" class="button primary large">Lancer mon Projet</a>
         </div>
         
+        <section class="image-separator-section">
+            <h3>Une Vision Claire de Votre Projet</h3>
+            <p>Cet espace est parfait pour insérer une grande image (ex: un écran d'ordinateur, un graphique ou une photo de bureau).</p>
+            <div class="image-placeholder">
+                <p>[Placeholder pour votre image de séparation]</p>
+            </div>
+        </section>
+        
         <section id="services" class="process-section" aria-labelledby="services-title">
             <h2 id="services-title">Votre Succès, Notre Process.</h2>
             <div class="process-steps">
