--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
     <header class="main-header" role="banner">
@@ -20,6 +23,11 @@
                 <li><a href="contact.html" class="cta-nav">Contact</a></li>
             </ul>
         </nav>
+        
+        <ul class="social-nav">
+            <li><a href="https://facebook.com" target="_blank" aria-label="Notre page Facebook"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="https://instagram.com" target="_blank" aria-label="Notre compte Instagram"><i class="fab fa-instagram"></i></a></li>
+        </ul>
     </header>
 
     <main id="main-content" role="main">
