--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>On crée des expériences, pas juste des pages. Chaque parcours utilisateur est pensé pour la conversion.</p>
                 </article>
             </div>
-            <a href="#portfolio" class="button secondary">Voir nos Réalisations</a>
+            <a href="#portfolio" class="button primary large">Voir nos Réalisations</a>
         </section>
         
         <div class="intro-message-container-deplace"> 
