--- a/html/a-propos.html
+++ b/html/a-propos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>À Propos - Votre Développeur Web Indépendant</title>
     
-    <link rel="stylesheet" href="a-propos.css"> 
+    <link rel="stylesheet" href="css/a-propos.css"> 
     
 </head>
 <body>
@@ -23,7 +23,7 @@
         <div class="section">
             <div class="content-row">
                 <div class="image-col">
-                    <img src="MISSION.JPG" alt="Photo illustrant la stratégie et la mission" class="section-image">
+                    <img src="image/MISSION.JPG" alt="Photo illustrant la stratégie et la mission" class="section-image">
                 </div>
                 <div class="text-col">
                     <h2>Ma Mission : Liberté, Performance et Maîtrise</h2>
@@ -42,7 +42,7 @@
         <div class="section row-reverse">
             <div class="content-row">
                 <div class="image-col">
-                    <img src="EXPERTISE.JPG" alt="Photo illustrant l'expertise en développement web" class="section-image">
+                    <img src="image/EXPERTISE.JPG" alt="Photo illustrant l'expertise en développement web" class="section-image">
                 </div>
                 <div class="text-col">
                     <h2>L'Expertise d'un Artisan du Web</h2>
@@ -65,7 +65,7 @@
         <div class="section">
              <div class="content-row">
                 <div class="image-col">
-                    <img src="PROCESSUS.JPG" alt="Photo illustrant les étapes du processus de travail" class="section-image">
+                    <img src="image/PROCESSUS.JPG" alt="Photo illustrant les étapes du processus de travail" class="section-image">
                 </div>
                 <div class="text-col">
                     <h2>Mon Processus : De l'Idée à la Propriété</h2>
