--- a/html/index.html
+++ b/html/index.html
@@ -67,7 +67,7 @@
         Cet espace est parfait pour insérer une grande image (ex: un écran d'ordinateur, un graphique ou une photo de bureau).
     </p>
     <div class="image-placeholder">
-        <img src="URL_DE_VOTRE_IMAGE.jpg" alt="Description de l'image de votre projet ou produit" class="project-image">
+        <img src="image/CREATION.png" alt="Description de l'image de votre projet ou produit" class="project-image">
         </div>
 </section>
        
