--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Code Studio | Création de Sites Web Modernes & Performants</title>
     <meta name="description" content="Agence web experte en création de sites modernes, performants et optimisés SEO. UX/UI, développement sur mesure, accompagnement complet.">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
@@ -67,7 +67,7 @@
         Cet espace est parfait pour insérer une grande image (ex: un écran d'ordinateur, un graphique ou une photo de bureau).
     </p>
     <div class="image-placeholder">
-        <img src="image/CREATION.png" alt="Description de l'image de votre projet ou produit" class="project-image">
+        <img src="../image/CREATION.png" alt="Description de l'image de votre projet ou produit" class="project-image">
         </div>
 </section>
        
