--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactez French Code Studio - Démarrer votre projet</title>
     <meta name="description" content="Contactez French Code Studio pour démarrer votre projet web sur mesure, refonte, SEO ou maintenance. Réponse sous 24h.">
-    <link rel="stylesheet" href="css/style.css"> 
-    <link rel="stylesheet" href="css/contact.css"> 
+    <link rel="stylesheet" href="../css/style.css"> 
+    <link rel="stylesheet" href="../css/contact.css"> 
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
