--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="main-header" role="banner">
         <nav aria-label="Navigation principale">
             <ul class="nav-links">
-                <li><a href="#services">Services</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="#portfolio">Réalisations</a></li>
                 <li><a href="a-propos.html" class="cta-nav">À Propos</a></li>
                 <li><a href="contact.html" class="cta-nav">Contact</a></li>
@@ -58,7 +58,7 @@
                 Fatigué des sites datés qui ne convertissent pas ? Nous concevons des plateformes web modernes, 
                 <strong>optimisées SEO</strong> et centrées sur l’utilisateur (UX/UI), pour propulser votre croissance.
             </p>
-            <a href="#services" class="button primary large">Lancer mon Projet</a>
+            <a href="services.html" class="button primary large">Lancer mon Projet</a>
         </div>
         
         <section id="vision-claire" class="image-separator-section" aria-labelledby="vision-title">
