--- a/services.html
+++ b/services.html
@@ -42,6 +42,10 @@
             </div>
         </section>
 
+    <section class="section-image-divider">
+        <img src="votre-image.jpg" alt="Illustration de nos services">
+    </section>
+
         <section class="section-pricing">
             <h2>Choisissez Votre Formule Idéale</h2>
             <div class="pricing-table">
