--- a/a-propos.html
+++ b/a-propos.html
@@ -49,7 +49,7 @@ body::before {
     height: 100%;
     
     /* ⚠️ REMPLACER PAR LE CHEMIN DE VOTRE LOGO */
-    background-image: url('LOGO FCS.jpg'); 
+    background-image: url('.../image/LOGO FCS.jpg'); 
     
     background-repeat: no-repeat;
     background-position: center 15%;
