--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav aria-label="Navigation principale">
             <ul class="nav-links">
                 <li><a href="services.html">Services</a></li>
-                <li><a href="#portfolio">Réalisations</a></li>
+                <li><a href="réalisations.html">Réalisations</a></li>
                 <li><a href="a-propos.html" class="cta-nav">À Propos</a></li>
                 <li><a href="contact.html" class="cta-nav">Contact</a></li>
             </ul>
