--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Contactez French Code Studio pour démarrer votre projet web sur mesure, refonte, SEO ou maintenance. Réponse sous 24h.">
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="css/contact.css"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Lato:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
