--- a/services.html
+++ b/services.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="css/services.css"> 
 </head>
 <body>
-
+    <div class="back-button-fixed">
+    <a href="javascript:history.back()" class="back-link" aria-label="Retour à la page précédente">
+        <i class="fas fa-arrow-left"></i> 
+    </a>
+</div>
 
     <main id="main-content" role="main">
 
