--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 </head>
 <body>
+    <div class="back-button-fixed">
+    <a href="javascript:history.back()" class="back-link" aria-label="Retour à la page précédente">
+        <i class="fas fa-arrow-left"></i> 
+    </a>
+</div>
     <header class="main-header" role="banner">
         <nav aria-label="Navigation principale">
             <ul class="nav-links">
