--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,13 @@
 </head>
 <body>
 
-    <header class="main-header">
-        <!-- Navigation ou logo ici -->
-    </header>
+    <header class="main-header" role="banner">
+    
+    <a href="javascript:history.back()" class="back-link" aria-label="Retour à la page précédente">
+        <i class="fas fa-arrow-left"></i> 
+    </a>
+    
+</header>
 
 
     <main role="main">
