--- a/a-propos.html
+++ b/a-propos.html
@@ -9,6 +9,11 @@
     
 </head>
 <body>
+    <div class="back-button-fixed">
+    <a href="javascript:history.back()" class="back-link" aria-label="Retour à la page précédente">
+        <i class="fas fa-arrow-left"></i> 
+    </a>
+</div>
 
     <div class="container">
 
