--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
         </section>
 
     <section class="section-image-divider">
-        <img src="votre-image.jpg" alt="Illustration de nos services">
+        <img src="image/mise-en-page.png" alt="Illustration de nos services">
     </section>
 
         <section class="section-pricing">
