--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
 </head>
 <body>
 
-    <header class="main-header" role="banner">
-    
-    <a href="javascript:history.back()" class="back-link" aria-label="Retour à la page précédente">
-        <i class="fas fa-arrow-left"></i> 
-    </a>
-    
+ <header class="main-header" role="banner">
+    <div class="back-button-fixed">
+        <a href="javascript:history.back()" class="back-link" aria-label="Retour à la page précédente">
+            <i class="fas fa-arrow-left"></i> 
+       </a>
+    </div>
 </header>
 
 
